--- a/Lesson01/Lesson01.csproj
+++ b/Lesson01/Lesson01.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DZ\DZ1.cs" />
+    <Compile Include="DZ\DZ2.cs" />
     <Compile Include="MyApps\Class01RefOut.cs" />
     <Compile Include="MyApps\Class02Params.cs" />
     <Compile Include="MyApps\Class03Factorial.cs" />
@@ -52,6 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DZ\Homework.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
