--- a/Lesson01/Lesson01.csproj
+++ b/Lesson01/Lesson01.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="DZ\DZ1.cs" />
     <Compile Include="DZ\DZ2.cs" />
+    <Compile Include="DZ\DZ3.cs" />
     <Compile Include="MyApps\Class01RefOut.cs" />
     <Compile Include="MyApps\Class02Params.cs" />
     <Compile Include="MyApps\Class03Factorial.cs" />
