--- a/Lesson02/Lesson02.csproj
+++ b/Lesson02/Lesson02.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Sorting\Algorithms\ThreeWayMerge.cs" />
     <Compile Include="Sorting\Algorithms\Tim.cs" />
     <Compile Include="Sorting\Algorithms\Tree.cs" />
+    <Compile Include="Sorting\MakeArray.cs" />
+    <Compile Include="Sorting\SelectSortingMethod.cs" />
     <Compile Include="Sorting\Sort.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -93,6 +95,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Homework.txt" />
+    <Content Include="Sorting\SortingMethods.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
